using System;
using System.Collections.Generic;
using System.Linq;
using System.Text;
using System.Threading.Tasks;

namespace DomainLayer.Objects.Applications
{
    public class BiometricIdentification: IBiometricIdentification
    {
        public BiometricIdentification() { }

        //not included in prototype
    }
}
